change to rem set hover-color as a var

--- a/packages/mantine-react-table/src/menus/MRT_ShowHideColumnsMenuItems.module.css
+++ b/packages/mantine-react-table/src/menus/MRT_ShowHideColumnsMenuItems.module.css
@@ -4,27 +4,27 @@
   justify-content: flex-start;
   opacity: 1;
   outline: none;
-  padding-top: 6px;
-  padding-bottom: 6px;
+  padding-top: rem(6px);
+  padding-bottom: rem(6px);
   padding-bottom: calc((var(--_column-depth) + 0.5) * 2);
   &[data-dragging] {
     opacity: 0.5;
     outline: 1px dashed var(--mantine-color-gray-7);
   }
   &[data-hovered] {
-    outline: 2px dashed var(--mantine-primary-color-filled);
+    outline: 2px dashed var(--_hover-color);
   }
 }
 .menu {
   display: flex;
   flex-wrap: nowrap;
-  gap: 8px;
+  gap: rem(8px);
 }
 .grab {
-  width: 22px;
+  width: rem(22px);
 }
 .pin {
-  width: 70px;
+  width: rem(70px);
 }
 .switch {
   cursor: pointer !important;
