--- a/apps/mantine-react-table-docs/pages/index.module.css
+++ b/apps/mantine-react-table-docs/pages/index.module.css
@@ -34,11 +34,16 @@
 }
 
 .titleMantineReactTable {
-  background-image: linear-gradient(
+  /* background: linear-gradient(
     to right,
-    var(--TODO_PRIMARY_COLOR),
+    var(--mantine-colors-teal-7),
+    var(--mantine-colors-blue-7)
+  ); */
+  background: -webkit-linear-gradient(
+    var(--mantine-colors-teal-7),
     var(--mantine-colors-blue-7)
   );
+
   display: inline;
   -webkit-background-clip: text;
   background-clip: text;
@@ -82,4 +87,15 @@
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.builtWithMantine {
+  line-height: var(--mantine-line-height-md);
+  font-size: inherit;
+  text-decoration: none;
+}
+.builtWithTanStack {
+  line-height: var(--mantine-line-height-md);
+  font-size: inherit;
+  text-decoration: none;
 }
