start work on fixing action icons... not happy yet, i think we need to extract a common component.

--- a/packages/mantine-react-table/src/menus/MRT_ColumnActionMenu.module.css
+++ b/packages/mantine-react-table/src/menus/MRT_ColumnActionMenu.module.css
@@ -1,6 +1,8 @@
-.action-icon {
+.action {
+  color: light-dark(var(--mantine-color-gray-4), var(--mantine-color-dark-4));
+  background-color: transparent;
   opacity: 0.5;
-  transition: opacity 100ms;
+  transition: opacity 100ms ease;
   &:hover {
     opacity: 1;
   }
