refactor: use hover mixin for MRT_TableBodyRow.module.css

--- a/packages/mantine-react-table/src/body/MRT_TableBodyRow.module.css
+++ b/packages/mantine-react-table/src/body/MRT_TableBodyRow.module.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   width: 100%;
   transition: all 100ms ease-in-out;
+
   &--layout-grid {
     display: flex;
   }
@@ -17,16 +18,20 @@
   }
 
   &--hover {
-    &:hover td[data-selected="true"] {
-      background-color: var(--mantine-primary-color-filled)
+    td[data-selected="true"] {
+      @mixin hover {
+        background-color: var(--mantine-primary-color-filled)
+      }
     }
 
-    &:hover td[data-selected="false"] {
-      @mixin light {
-        background-color: rgba(var(--mantine-color-white), 0.05);
-      }
-      @mixin dark {
-        background-color: rgba(var(--mantine-color-dark-7), 0.12);
+    td[data-selected="false"] {
+      @mixin hover {
+        @mixin light {
+          background-color: rgba(var(--mantine-color-white), 0.05);
+        }
+        @mixin dark {
+          background-color: rgba(var(--mantine-color-dark-7), 0.12);
+        }
       }
     }
   }
