fix: rendering issues with footer components

--- a/packages/mantine-react-table/src/footer/MRT_TableFooter.module.css
+++ b/packages/mantine-react-table/src/footer/MRT_TableFooter.module.css
@@ -1,24 +1,16 @@
-.MRT_TableFooter {
-  &--grid {
-    display: grid;
+.MRT_TableFooterSticky {
+  bottom: 0;
+  opacity: 0.97;
+  position: sticky;
+  z-index: 1;
+
+  @mixin light {
+    outline: 1px solid var(--mantine-color-gray-3);
   }
 
-  &--table-row-group {
-    display: table-row-group;
-  }
-
-  &--sticky {
-    bottom: 0;
-    opacity: 0.97;
-    position: sticky;
-    z-index: 1;
-
-    @mixin light {
-      outline: 1px solid var(--mantine-color-gray-3);
-    }
-
-    @mixin dark {
-      outline: 1px solid var(--mantine-color-gray-7);
-    }
+  @mixin dark {
+    outline: 1px solid var(--mantine-color-gray-7);
   }
 }
+
+
