--- a/packages/mantine-react-table/src/head/MRT_TableHeadCell.module.css
+++ b/packages/mantine-react-table/src/head/MRT_TableHeadCell.module.css
@@ -1,3 +1,18 @@
+.MRT_TableHeadCell {
+  flex-direction: var(--flex-direction);
+  font-weight: bold;
+  overflow: visible;
+  padding: var(--padding);
+  user-select: var(--user-select);
+  vertical-align: top;
+  z-index: var(--z-index);
+  @mixin hover {
+    .mantine-ActionIcon-root {
+      opacity: 1;
+    }
+  }
+}
+
 .content {
   align-items: flex-start;
   position: relative;
