fix: rendering issues with input components

--- a/packages/mantine-react-table/src/inputs/MRT_GlobalFilterTextInput.module.css
+++ b/packages/mantine-react-table/src/inputs/MRT_GlobalFilterTextInput.module.css
@@ -1,13 +1,12 @@
 .MRT_GlobalFilterTextInput {
-  &-collapse {
-    & > div {
-      display: flex;
-      align-items: center;
-      gap: rem(16px);
-      flex-wrap: nowrap;
-    }
-  }
-  &-text-input {
-    min-width: rem(250px);
+  min-width: 250px;
+}
+
+.MRT_GlobalFilterTextInputCollapse {
+  & > div {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    flex-wrap: nowrap;
   }
 }
