parseFromValuesOrFunc rename and mrt_table refactor

--- a/packages/mantine-react-table/src/table/MRT_Table.module.css
+++ b/packages/mantine-react-table/src/table/MRT_Table.module.css
@@ -1,19 +1,16 @@
 .root {
-  --first-last-color: light-dark(
-    var(--mantine-color-gray-3),
-    var(--mantine-color-gray-8)
-  );
   & tr:first-of-type td {
-    border-top: 1px solid var(--first-last-color);
+    border-top: 1px solid var(--mantine-color-gray-3);
   }
   & tr:last-of-type td {
-    border-bottom: 1px solid var(--first-last-color);
+    border-bottom: 1px solid var(--mantine-color-gray-3);
   }
-  display: table;
-  [data-layout='grid'] {
-    display: grid;
-  }
-  :not([data-layout='grid'])[data-column-resizing] {
-    table-layout: fixed;
-  }
+}
+
+.root-grid {
+  display: grid;
+}
+
+.root-semantic-not-resizing {
+  table-layout: fixed;
 }
