--- a/packages/mantine-react-table/src/body/MRT_TableBody.module.css
+++ b/packages/mantine-react-table/src/body/MRT_TableBody.module.css
@@ -23,7 +23,7 @@
 }
 
 .empty-row-td-content {
-  color: var(--mantine-color-gray);
+  color: var(--mantine-color-gray-3);
   font-style: italic;
   max-width: min(100vw, var(--mrt-paper-width)px);
   padding-bottom: 2rem;
