--- a/packages/mantine-react-table/src/body/MRT_TableBodyRow.module.css
+++ b/packages/mantine-react-table/src/body/MRT_TableBodyRow.module.css
@@ -1,28 +1,39 @@
-.MRT_TableBodyRow {
+.root {
   box-sizing: border-box;
   width: 100%;
   transition: all 100ms ease-in-out;
-  display: var(--display);
+
+  &[data-selected='true'] {
+    background-color: var(--mantine-primary-color-light);
+  }
 }
 
-.MRT_TableBodyRowHover {
-  @mixin hover {
-    &[data-selected="true"] > td {
-      background-color: var(--mantine-primary-color-filled)
+.root-grid {
+  display: flex;
+}
+
+.root-hover {
+  &:hover td {
+    &[data-selected='true'] {
+      background-color: var(--mantine-primary-color-light-hover);
     }
-    &[data-selected="false"] > td {
-        @mixin dark {
-          background-color: var(--dark-bg-color);
-        }
-        @mixin light {
-          background-color: var(--light-bg-color);
-        }
+    &[data-selected='false'] {
+      @mixin dark {
+        background-color: var(--mantine-color-gray-light-hover);
+      }
+      @mixin light {
+        background-color: var(--mantine-color-dark-light-hover);
+      }
     }
   }
 }
 
-.MRT_TableBodyRowVirtual {
+.root-virtualized {
   position: absolute;
   top: 0;
   transition: none !important;
+}
+
+.root-dragging {
+  opacity: 0.5;
 }
