--- a/packages/mantine-react-table/src/buttons/MRT_ActionIcon.module.css
+++ b/packages/mantine-react-table/src/buttons/MRT_ActionIcon.module.css
@@ -1,4 +1,4 @@
-.ai {
+.root {
   color: light-dark(var(--mantine-color-gray-5), var(--mantine-color-dark-3));
   background-color: transparent;
   transition: all 100ms ease;
