Refactor Toolbars to use CSS modules (#153)
* fix comment style on columns.util

* fix: re-add getprimarycolor and getprimaryshade utilities

* fix: storybook runtime errors

* fix: rendering issues with body components

* fix: rendering issues with footer components

* fix: rendering issues with head components

* fix: rendering issues with input components

* fix: custom toolbar story

* refactor: toolbar components to use CSS modules

* fix: merge errors

--- a/packages/mantine-react-table/src/body/MRT_TableBodyRow.module.css
+++ b/packages/mantine-react-table/src/body/MRT_TableBodyRow.module.css
@@ -2,6 +2,8 @@
   box-sizing: border-box;
   width: 100%;
   transition: all 100ms ease-in-out;
+  display: var(--display);
+}
 
   &[data-selected='true'] {
     background-color: var(--mantine-primary-color-light);
