--- a/packages/mantine-react-table/src/head/MRT_TableHead.module.css
+++ b/packages/mantine-react-table/src/head/MRT_TableHead.module.css
@@ -12,3 +12,16 @@
   top: 0;
   z-index: 2;
 }
+
+.banner-tr {
+  display: table-row;
+}
+
+.banner-th {
+  display: table-cell;
+  padding: 0;
+}
+
+.grid {
+  display: grid;
+}
