--- a/packages/mantine-react-table/src/inputs/MRT_GlobalFilterTextInput.module.css
+++ b/packages/mantine-react-table/src/inputs/MRT_GlobalFilterTextInput.module.css
@@ -1,8 +1,8 @@
-.MRT_GlobalFilterTextInput {
+.root {
   min-width: 250px;
 }
 
-.MRT_GlobalFilterTextInputCollapse {
+.collapse {
   & > div {
     display: flex;
     align-items: center;
