--- a/packages/mantine-react-table/src/toolbar/MRT_ToolbarDropZone.module.css
+++ b/packages/mantine-react-table/src/toolbar/MRT_ToolbarDropZone.module.css
@@ -1,4 +1,4 @@
-.dropzone-container {
+.root {
   align-items: center;
   background-color: var(--mrt-dropzone-bg-color);
   border: dashed var(--mantine-primary-color-filled) 2px;
