get rid of a bunch more inline styles

--- a/packages/mantine-react-table/src/body/MRT_TableBody.module.css
+++ b/packages/mantine-react-table/src/body/MRT_TableBody.module.css
@@ -11,7 +11,7 @@
 }
 
 .root-virtualized {
-  height: calc(var(--mrt-table-body-height) * 1px);
+  height: var(--mrt-table-body-height);
 }
 
 .empty-row-tr-grid {
