--- a/packages/mantine-react-table/src/toolbar/MRT_ToolbarDropZone.module.css
+++ b/packages/mantine-react-table/src/toolbar/MRT_ToolbarDropZone.module.css
@@ -1,10 +1,23 @@
 .root {
   align-items: center;
-  background-color: var(--mrt-dropzone-bg-color);
+
   border: dashed var(--mantine-primary-color-filled) 2px;
   justify-content: center;
   height: 100%;
   width: 100%;
   position: absolute;
   z-index: 2;
+  background-color: color-mix(
+    in srgb,
+    var(--mantine-primary-color-filled) 10%,
+    transparent
+  );
+}
+
+.hovered {
+  background-color: color-mix(
+    in srgb,
+    var(--mantine-primary-color-filled) 20%,
+    transparent
+  );
 }
