--- a/packages/mantine-react-table/src/head/MRT_TableHeadCellSortLabel.module.css
+++ b/packages/mantine-react-table/src/head/MRT_TableHeadCellSortLabel.module.css
@@ -1,4 +1,18 @@
-.MRT_TableHeadCellSortLabel {
+.sort-icon {
+  color: light-dark(var(--mantine-color-gray-5), var(--mantine-color-dark-3));
+  background-color: transparent;
+  transition: all 100ms ease;
+  @mixin hover {
+    color: light-dark(var(--mantine-color-gray-9), var(--mantine-color-dark-0));
+    background: light-dark(
+      var(--mantine-color-gray-1),
+      var(--mantine-color-dark-6)
+    );
+  }
+  &:disabled {
+    background-color: transparent;
+    border: none;
+  }
   &[data-sorted] {
     color: var(--mantine-primary-color-filled);
   }
