--- a/packages/mantine-react-table/src/head/MRT_TableHeadCellSortLabel.module.css
+++ b/packages/mantine-react-table/src/head/MRT_TableHeadCellSortLabel.module.css
@@ -1,19 +1,16 @@
 .sort-icon {
-  color: light-dark(var(--mantine-color-gray-5), var(--mantine-color-dark-3));
-  background-color: transparent;
   transition: all 100ms ease;
-  @mixin hover {
-    color: light-dark(var(--mantine-color-gray-9), var(--mantine-color-dark-0));
-    background: light-dark(
-      var(--mantine-color-gray-1),
-      var(--mantine-color-dark-6)
-    );
-  }
-  &:disabled {
-    background-color: transparent;
-    border: none;
-  }
+  --ai-size: var(--ai-size-sm);
+  --ai-bg: transparent;
+  --ai-hover: light-dark(
+    var(--mantine-color-gray-1),
+    var(--mantine-color-dark-6)
+  );
+  --ai-color: light-dark(
+    var(--mantine-color-gray-5),
+    var(--mantine-color-dark-3)
+  );
   &[data-sorted] {
-    color: var(--mantine-primary-color-filled);
+    --ai-color: var(--mantine-primary-color-filled);
   }
 }
